--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -1,19 +1,20 @@
 <%- include("partials/header"); -%>
 
 
-    <h1>React API in Node.js with MongoDB as database for creation tasts with in a duration ( in minutes)</h1>
+    <h2>React API in Node.js with MongoDB as database to create tasks for particular duration ( in minutes)</h2>
     <div class="container">
         <div class="card">
             <div class="card-body">
-                <h2>
-                    <ul>
-                        <li>I used Node.js for Backend</li>
-                        <li>I used Mongoose Database for Backend</li>
-                        <li>I used JavaScript Css Html for Frontend</li>
-                    </ul>
+                <h3><i>
+                <ul>
+                    <li style="display: block;">I used: </li>
+                    <li>Node.js for Backend</li>
+                    <li>Mongoose Database for Backend</li>
+                    <li>JavaScript, CSS, HTML for Frontend</li>
+                </ul>
+            </i>
 
-
-                </h2>
+                </h3>
             </div>
         </div>
     </div>
