--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     <% tasks_list%>
 
 
-        <h1>Total: Tasks =
+        <h1>Total Tasks =
             <%=tasks_list.length%>
         </h1>
         <%  tasks_list.forEach(function(tasks_list){ %>
