--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </div>
 <div class="footer-padding"></div>
 <div class="footer">
-    <p>Rest API TO DO LIST by Mansi Dhall</p>
+    <p>TO DO LIST by Mansi Dhall</p>
 </div>
 </div>
 </body>
