--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mansi to do list</title>
+    <title>to do list</title>
     <meta charset="utf-8">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="/css/styles.css">
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <p class="navbar-brand">To-Do List Using Rest API (CRUD)</p>
+                <p class="navbar-brand">To-Do List</p>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li id="Get"><a href="/">Home</a></li>
